# termii-py

./: .flake8  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
termii/: __init__.py  auth.py  campaign.py  contacts.py  messaging.py  token.py  utils.py
termii/endpoints/: campaign.py  contacts.py  messaging.py  token.py
termii/messaging/: core.py  endpoints.py  schemas.py
termii/schemas/: messaging.py  shared.py  token.py
tests/: conftest.py  test_auth.py  test_campaign.py  test_contacts.py  test_messaging.py  test_token.py
tests/test_data/: campaign.py  messaging.py  sender_id.py  token.py
