[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termii-py"
version = "0.1.5"
authors = [
  { name="Unyime Etim", email="lordunyime@gmail.com" },
]
description = "A beginner friendly SDK for Termii."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.hatch.build.targets.wheel]
packages = ["termii"]


dependencies = [
  "requests>=2.23.0,<=2.32.0",
  "pydantic>=1.10.4,<=2.7.0"
]

[project.urls]
"Homepage" = "https://github.com/unyime1/termii-py"
"Bug Tracker" = "https://github.com/unyime1/termii-py/issues"